fix(components/card): too much spacing above background image

--- a/src/components/card/card.less
+++ b/src/components/card/card.less
@@ -34,7 +34,7 @@
 
     background-image: var(--background-image);
     background-color: var(--background-color);
-    background-position: center (@spacing * 2);
+    background-position: center;
     background-repeat: no-repeat;
   }
 
